src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>OppStage</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awareness of interest</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Decision Phase</fullName>
        </values>
        <values>
            <fullName>Demand Analysis</fullName>
        </values>
        <values>
            <fullName>Follow-Up</fullName>
        </values>
        <values>
            <fullName>Offer Phase</fullName>
        </values>
        <values>
            <fullName>Pre-Installation-Cancellation</fullName>
        </values>
        <values>
            <fullName>Ready for Order</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Stage</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awareness of interest</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Decision Phase</fullName>
        </values>
        <values>
            <fullName>Demand Analysis</fullName>
        </values>
        <values>
            <fullName>Follow-Up</fullName>
        </values>
        <values>
            <fullName>Offer Phase</fullName>
        </values>
        <values>
            <fullName>Pre-Installation-Cancellation</fullName>
        </values>
        <values>
            <fullName>Ready for Order</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Add_mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want a blank DD Mandate to be send to the customer.</description>
        <inlineHelpText>Check this box if you want a blank DD Mandate to be send to the customer.</inlineHelpText>
        <label>Add mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analog_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Analog_Availability__c, &apos;Available&apos;),
	IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;),
	If( ISPICKVAL(Analog_Availability__c, &apos;Unavailable&apos;),
           IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;),
		   IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;)
	)
)</formula>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Analog Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analog_Availability__c</fullName>
        <label>Analog Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Stage4_5__c</fullName>
        <description>[VGN-155] 
Used to control the sign off of Revenue &gt; Ã‚Â£1M</description>
        <label>Approval: Quoting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Stage_5_6__c</fullName>
        <description>[VGN-155] 
Used to control the sign off of Revenue &gt; Ã‚Â£1M after original quoted value + negotiations.</description>
        <inlineHelpText>Controls resubmissions for final quotes</inlineHelpText>
        <label>Approval: NegoReq Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Changed Values - previously approved.</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPEX__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSCAP__Authoriser_Email_Address__c</fullName>
        <label>Authoriser Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSCAP__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCAP__VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Field to capture the date when opportunity was first closed.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_on_Penalty_Fee__c</fullName>
        <formula>LG_CalculatedPenaltyFee__c - LG_FinalPenalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount on Penalty Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_Fiber__c</fullName>
        <description>Abstand Fibertrasse Übergabepunkt</description>
        <label>Distance Fiber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_Hub__c</fullName>
        <description>Abstand zum nächsten Hub</description>
        <label>Distance Hub</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FORCE_Opportunity__c</fullName>
        <externalId>true</externalId>
        <label>FORCE Opportunity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeText__c</fullName>
        <description>Information within this field should be kept for opportunity level after conversion</description>
        <label>Description</label>
        <length>25500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Sales_Id__c</fullName>
        <label>Internal Sales Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Internet_Availability__c, &apos;Available&apos;),
	IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;),
	If( ISPICKVAL(Internet_Availability__c, &apos;Unavailable&apos;),
           IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;),
		   IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Internet Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Availability__c</fullName>
        <label>Internet Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_Marketable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internet Vermartbar</description>
        <label>Internet Marketable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Availability_Performed_FF__c</fullName>
        <formula>If( ISPICKVAL(Is_Availability_Performed__c, &apos;No&apos;),
	IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;),
	IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;)
)</formula>
        <inlineHelpText>Green Flag - Service Available; Gray Flag - Service Availability check is not performed yet. Please click on “Availability Checker” button to perform the availability check.</inlineHelpText>
        <label>Is Availability Performed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Availability_Performed__c</fullName>
        <description>To check the product&apos;s availability on a given postal code</description>
        <inlineHelpText>Please click on Perform “Availability Checker” button to perform the availability check, every time address is changed, availability details would be changed to default “Not Performed.”</inlineHelpText>
        <label>Is Availability Performed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AccntPostalCity__c</fullName>
        <formula>Account.LG_PostalCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccntPostalCountry__c</fullName>
        <formula>TEXT(Account.LG_PostalCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccntPostalHouseNumberExtension__c</fullName>
        <formula>Account.LG_PostalHouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal House Number Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccntPostalHouseNumber__c</fullName>
        <formula>Account.LG_PostalHouseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal House Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccntPostalPostalCode__c</fullName>
        <formula>Account.LG_PostalPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccntPostalStreet__c</fullName>
        <description>Postal Street of the Account</description>
        <formula>Account.LG_PostalStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ActiveVersion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates active version of Opportunity</description>
        <inlineHelpText>Used to indicate acrive version during complex changes</inlineHelpText>
        <label>Active Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ApprovalPenaltyFeeDiscount__c</fullName>
        <label>Approval: Penalty Fee Discount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AutomatedQuoteDelivery__c</fullName>
        <description>Hidden Picklist for Conga Workflow - Quote Creation from Tablet App</description>
        <label>Automated Quote Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Quote Requested</fullName>
                </value>
                <value>
                    <fullName>Quote Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_BankAccountName__c</fullName>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BankNumber__c</fullName>
        <label>Bank Number (IBAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingCountry__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_BillingHouseNumberExtension__c</fullName>
        <label>Billing House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingHouseNumber__c</fullName>
        <label>Billing House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_COAXConnectionLocation__c</fullName>
        <label>COAX Connection Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CalculatedPenaltyFee__c</fullName>
        <description>Holds the sum of calculated penalty fees</description>
        <inlineHelpText>Holds the sum of calculated penalty fees</inlineHelpText>
        <label>Calculated Penalty Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_CheckServiceAvailability__c</fullName>
        <formula>HYPERLINK(&quot;/partner/apex/LG_ServiceAvailabilitySF1?postalCode=&quot; + LG_InstallationPostalCode__c + &quot;&amp;houseNumber=&quot; + LG_InstallationHouseNumber__c + &quot;&amp;houseNumberExtension=&quot; + LG_InstallationHouseNumberExtension__c, IMAGE(&quot;/partner/servlet/servlet.FileDownload?file=&quot; + $Setup.LG_EnvironmentVariables__c.LG_ServiceAvailabilityIconID__c, &quot;Check Now&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Service-Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ClientNumber__c</fullName>
        <description>Client number</description>
        <inlineHelpText>Client number</inlineHelpText>
        <label>Client number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CompetitorContractEndDate__c</fullName>
        <label>Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_CompetitorName__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1&amp;1</fullName>
                </value>
                <value>
                    <fullName>Telekom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>O2</fullName>
                </value>
                <value>
                    <fullName>Tele2</fullName>
                </value>
                <value>
                    <fullName>Kabel Deutschland</fullName>
                </value>
                <value>
                    <fullName>Tele Columbus</fullName>
                </value>
                <value>
                    <fullName>EWE Tel</fullName>
                </value>
                <value>
                    <fullName>Net Cologne</fullName>
                </value>
                <value>
                    <fullName>M-net</fullName>
                </value>
                <value>
                    <fullName>swb</fullName>
                </value>
                <value>
                    <fullName>Versatel</fullName>
                </value>
                <value>
                    <fullName>Andere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Competitor_Product__c</fullName>
        <label>Competitor Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Internet+TV</fullName>
                </value>
                <value>
                    <fullName>Telephony</fullName>
                </value>
                <value>
                    <fullName>Telephony+Internet</fullName>
                </value>
                <value>
                    <fullName>Telephony+Internet+TV</fullName>
                </value>
                <value>
                    <fullName>Telephony+TV</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CongaAmount__c</fullName>
        <description>Hidden Amount field for Conga Template.</description>
        <formula>SUBSTITUTE(TEXT(FLOOR(FLOOR(Amount*100)/100) ),&apos;.00&apos;, &apos;,&apos;)&amp; &quot;,&quot; &amp; SUBSTITUTE(LEFT(TEXT((Amount-FLOOR(Amount))*100)&amp;&apos;0&apos;, 2),&apos;.&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CongaNonRecurringAmount__c</fullName>
        <description>Hidden Non Recurring Amount field for Conga Template.</description>
        <formula>SUBSTITUTE(TEXT(FLOOR(FLOOR(LG_NonRecurringAmount__c*100)/100) ),&apos;.00&apos;, &apos;,&apos;)&amp; &quot;,&quot; &amp; SUBSTITUTE(LEFT(TEXT((LG_NonRecurringAmount__c-FLOOR(LG_NonRecurringAmount__c))*100)&amp;&apos;0&apos;, 2),&apos;.&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaNonRecurringAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContractTermMonths__c</fullName>
        <label>Contract Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ContractTermText__c</fullName>
        <formula>IF( LG_ContractTermMonths__c &lt; 12, TEXT(LG_ContractTermMonths__c) &amp;&quot;-maand&quot;,  IF(LG_ContractTermMonths__c &lt; 24 , &quot;1-jarig&quot;,  IF(LG_ContractTermMonths__c &lt; 36, &quot;2-jarig&quot;, &quot;3-jarig&quot;) ) ) &amp; &quot; contract&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CreateQuoteURL__c</fullName>
        <description>Field for Conga Workflow which adds Quote Detail document into attachments of Opportunity record. Solution for Tablet App</description>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;QueryId=[BillAcc]a1g0E0000004VMM&quot;+
&quot;&amp;QueryId=[Owner]a1g0E0000004VLT&quot; + 
&quot;&amp;QueryId=[Product]a1g0E0000004VLn&quot; + 
&quot;&amp;QueryId=[OppPro]a1g0E0000004VLs&quot; +
&quot;&amp;QueryId=[DigiTV]a1g0E0000004VLx&quot; +
&quot;&amp;QueryId=[OppPhone]a1g0E0000004VM2&quot; +
&quot;&amp;QueryId=[DisVal]a1g0E0000004VM7&quot; +
&quot;&amp;QueryId=[ConRole]a1g0E0000004VMH&quot;+
&quot;&amp;TemplateId=a1o0E000000DBpl&quot;+
&quot;&amp;SCHP=2&quot; + 
&quot;&amp;DefaultPDF=1&amp;OFN=+Ihr+Auftrag+an+Unitymedia+Business+&quot;+TEXT(TODAY())+&quot;&amp;DS7=5&amp;FP0=1&amp;QMode=1&quot;</formula>
        <label>Create Quote URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CreditCheckStatus__c</fullName>
        <label>Credit Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Mismatch</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Credit_Check_Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mitigated</fullName>
                </value>
                <value>
                    <fullName>Mitigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CustomerReference__c</fullName>
        <description>This field contains an optional Customer Reference value.</description>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DTV__c</fullName>
        <description>DTV</description>
        <label>DTV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DaysSinceStageChange__c</fullName>
        <formula>TODAY() - LG_LastStageChangeDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_DebitCheckStatus__c</fullName>
        <label>Debt Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ExistingSubscription__c</fullName>
        <description>Existing subscription</description>
        <inlineHelpText>Input existing subscription if one exists</inlineHelpText>
        <label>Existing subscription</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Residential without internet</fullName>
                </value>
                <value>
                    <fullName>Residential with internet</fullName>
                </value>
                <value>
                    <fullName>Soho 1P/5P</fullName>
                </value>
                <value>
                    <fullName>Office basis</fullName>
                </value>
                <value>
                    <fullName>Connect ZZP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_FeedbackBackOffice__c</fullName>
        <label>Feedback from Back Office</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_FinalPenalty__c</fullName>
        <description>Holds the value of overridden penalty total</description>
        <inlineHelpText>Holds the value of overridden penalty total</inlineHelpText>
        <label>Final Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_IPAddress__c</fullName>
        <label>IP Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_InstallationCity__c</fullName>
        <label>Installation City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>